Fix image stretch

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -91,6 +91,11 @@
     border: 0.2em solid rgb(150, 116, 73);
 }
 
+.add-wishlist,
+.remove-wishlist {
+    padding-top: 0.1em;
+}
+
 .remove-wishlist{
     color: rgb(201, 69, 69);
 }
